[tool.poetry]
name = "addreddbook"
version = "0.1.0"
description = ""
authors = ["Dubas14 <ev.hanzha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^28.0.0"
docker = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
